--- a/index.html
+++ b/index.html
@@ -1,95 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimalix - A porta de entrada parao desenvolvimento Web</title>
+    <title>Minimalix  - A porta de entrada para o desenvolvimento web</title>
 
-    <!-- favicon -->
+    <!-- Favicon -->
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
 
-    <!-- meta -->
-    <meta name="description" content="Minimalix é a maneira mais fácil de você entrar no mundo de desenvolvimento de Front-End">
-    <meta name="keywords" content="front-end, html,css,js">
+    <!-- Meta -->
+    <meta name="description" content="Minimalix é a maneira mais fácil de você entrar no mundo de desenvolvimento Front-End">
+    <meta name="keywords" content="front-end, html, css, js">
 
-    <!-- CSS extremo -->
+    <!-- CSS Externo -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
 
-    <!-- iniciando área do cabeçalho -->
-        <header>
-            <div class="Limitador">
-                <!-- logotipo -->
-                <h1><a href="index.html" title="Página Inicial Minimalix">Minimalix</a></h1>
+    <!-- Iniciando área do cabeçalho -->
+    <header>
+        <div class="limitador">
+            <!-- Logotipo -->
+            <h1><a href="index.html" title="Página inicial Minimalix ">Minimalix </a></h1>
+            
+            <!-- Menu que aparece ao clicar no botão ou em telas maiores -->
+            <nav>
 
-                 <!-- menu que aparece ao clicar no botão ou em teclas maiores -->
-                <nav>
 
-                    <ul class="menu">
-                        <li><a href="index.html"title="página inicial">Home</a></li>
-                        <li><a href="produtos.html"title="conheça nossos produtos">Produtos</a></li>
-                        <li><a href="serviços.html"title="página inicial">Serviços</a></li>
-                        <li><a href="contato.html"title="página inicial">Contato</a></li>
-                    </ul>
-                </nav>
-             </div>
-        </header>
+                <ul class="menu">
+                    <li><a href="index.html" title="página inicial">Home</a></li>
+                    <li><a href="produtos.html" title="conheça nossos produtos">Produtos</a></li>
+                    <li><a href="servicos.html" title="da criação de site a loja virtual, conheça nossos serviços">Serviços</a></li>
+                    <li><a href="contato.html" title="fale com a equipe Minimalix ">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-        <!-- ___________________________________________________________________________________ -->
-        <!-- área de texto + 3 imagens -->
+    <!--____________________________________________________________________________________________________________________  -->
+    <!-- Área de conteudo principal -->
 
-        <section class="Limitador front-end">
+    <main>
+        <section class="destaque">
+            <div>
+                <h2>HTML5 e CSS3</h2>
+                <p>A porta de entrada para o desenvolvimento web.</p>
+            </div>
+        </section>
+
+        <!--________________________________________________________________________________________________________________  -->
+        <!-- Área de texto + 3 imagens -->
+
+        <section class="limitador front-end">
+
             <h2>Desenvolvedor Front-End</h2>
-            <p>O desenvolvedor front-end é o profissional que cuida da parte de código que é interpretada diretamente pelo <i>browser</i>.</p>
-            <p>No desenvolvimento por camadas.
-            <abbr title="HyperText Markup Language">HTML</abbr> é responsável por estruturar conteúdo
+            <p>O desenvolvedor Front-End é o profissional que cuida da parte de código que é interpretada diretamente pelo <i>browser</i>. </p>
+            <p>No desenvolvimento por camadas, 
+            <abbr title="HyperText Markup Language">HTML</abbr> é responsável por estruturar o conteúdo, 
             <abbr title="Cascading Style Sheets">CSS</abbr> cuida dos estilos visuais (incluindo animações) e o JavaScript é o responsável pelos comportamentos e interatividade.</p>
             <figure>
                 <img src="imagens/linguagens.png" alt="Logotipo das linguagens HTML, CSS e JavaScript">
             </figure>
+
         </section>
 
-        <!--_____________________________________________________________________________________-->
-        <!-- Area de Historia da Internet "Video" -->
+        <!--________________________________________________________________________________________________________________  -->
+        <!-- Área de História da Internet "Vídeo" -->
 
-    <section class="historia">
+        <section class="historia">
 
-        <h2>Historia da Internet</h2>
-        <iframe height="315" src="https://www.youtube.com/embed/jlkvzcG1UMk" title="YouTube video player" allow="accelerometer;
-        autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreem></iframe>
+            <h2>História da Internet</h2>
+            <iframe height="315" src="https://www.youtube.com/embed/jlkvzcG1UMk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    </section>
+        </section>
 
-        <!--_____________________________________________________________________________________-->
+        <!--________________________________________________________________________________________________________________  -->
         <!-- Área de Mapa "Googles Maps" -->
 
-    <section class="localizacao">
-        <h2>Localização</h2>
-        <p>Av Santos Dumont, 300 <br>
-        Ipiranguinha <br>
-        Santo André/SP </p>
-        <p>Telefone: <a href="tel:+551133220050">(11) 3322-0050</a> - E-mail: <a href="mailto:santoandre@sp.senai.br">santoandre@sp.
-        senai.br</a></p>
+        <section class="localizacao">
+            <h2>Localização</h2>
+            <p>Av Santos Dumont, 300 <br> 
+            Ipiranguinha  <br>
+            Santo André/SP </p>
+            <p>Telefone: <a href="tel:+551133220050">(11)  3322-0050</a> - E-mail: <a href="mailto:santoandre@sp.senai.br">santoandre@sp.senai.br</a></p>
 
-        <iframe src="https://www.google.com/maps/embed?pb =! 1m18!1m12!1m3!1d3654.268117966629!2d-46.52076328440502!3d-23.
-        66636787136494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce69d619d62a27%3A0x41f94d2be4af4536!2sEscola%20SENAI%20%22A.
-        %20Jacob%20Lafer%22!5e0!3m2!1spt-BR!2sbr!4v1669677629758!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;"
-        allowfullscrecn="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.268117966629!2d-46.52076328440502!3d-23.66636787136494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce69d619d62a27%3A0x41f94d2be4af4536!2sEscola%20SENAI%20%22A.%20Jacob%20Lafer%22!5e0!3m2!1spt-BR!2sbr!4v1669677629758!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-    </section>
-</main>
+        </section>
+    </main>
 
-<!-- Fim da área de conteudo principal -->
-<!--_____________________________________________________________________________________-->
+    <!-- Fim da área de conteudo principal -->
+    <!--_______________________________________________________________________________________________________________________________________  -->
 
-<!-- Footer -->
+    <!-- Footer -->
 
     <footer>
-        <p>Minimalix o um site ficticio desenvolvido no Senai/Sesi &copy; - Alguns Direitos Reservados - 2024</p>
+        <p>Minimalix é um site fictício desenvolvido no Senai/Sesi &copy; - Alguns Direitos Reservados - 2024</p>
     </footer>
+
 
 </body>
 </html>
