--- a/contato.html
+++ b/contato.html
@@ -156,7 +156,7 @@
 
      </main>
 
-    <!-- fim da Area de conteudo principal  -->
+    <!-- fim da área de conteúdo principal  -->
     <!-- ------------------------------------------------------------------------ -->
        <footer>
         <p>Minimalix e um site ficticios desenvolvido no Senai/sesi &copy; - alguns direitos reservados - 2024</p>
